feat(email): add a template for email in text and the url to the sheet

--- a/templates/emails/sheet.mjml
+++ b/templates/emails/sheet.mjml
@@ -100,7 +100,7 @@
         </mj-column>
         <mj-column width="100%">
             <mj-divider border-color="#C45525"/>
-                <mj-button href="#" color="#C45525" background-color="#E8A75D" font-weight="bold">
+            <mj-button href="{{ sheet_url }}" color="#C45525" background-color="#E8A75D" font-weight="bold">
                     Retrouvez ce produit sur notre site
                 </mj-button>
         </mj-column>
